src/objects/NC_Product_Defect__c.object
<CustomObject>
    <description>This is a Non Conformance - Product - Defect object.</description>
    <fields>
        <fullName>CustomerSupplier__c</fullName>
        <formula>Product_Lot_Numbers__r.Customer_Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerSupplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer/Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NC Product Defects</relationshipLabel>
        <relationshipName>NC_Product_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect_Name__c</fullName>
        <formula>Defect__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>NC Product Defects</relationshipLabel>
        <relationshipName>NC_Product_Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NC_Created_Date__c</fullName>
        <formula>Product_Lot_Numbers__r.NC_Created_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NC_Number__c</fullName>
        <formula>Product_Lot_Numbers__r.NC_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <formula>Product_Lot_Numbers__r.Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Conformance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Defect__c</fullName>
        <formula>Product_Lot_Numbers__r.NC_Product__r.Non_Conformance__r.Defect__c =  Defect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Defect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product_Lot_Numbers__r.NC_Product__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lot_Numbers_Name__c</fullName>
        <formula>Product_Lot_Numbers__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Lot Numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lot_Numbers__c</fullName>
        <label>Product Lot Numbers</label>
        <referenceTo>Product_Lot_Numbers__c</referenceTo>
        <relationshipLabel>NC Product Defects</relationshipLabel>
        <relationshipName>NC_Product_Defects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity_Affected__c</fullName>
        <formula>Product_Lot_Numbers__r.Lot_Quantity_Affected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Affected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suspect_Enabled__c</fullName>
        <formula>IF(ISPICKVAL(Defect__r.Suspect_Enabled__c, &quot;Yes&quot;),&quot;Yes&quot;,&quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suspect Enabled</label>
        <type>Text</type>
    </fields>
    <label>NC Product Defect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NCPD-{00000}</displayFormat>
        <label>NC Product Defect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC Product Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>